--- a/coc-settings.json
+++ b/coc-settings.json
@@ -107,11 +107,11 @@
   },
 
   "languageserver": {
-    "lua": {
-      "command": "/home/chris/.luambenvs/neovim4/bin/lua-lsp",
-      "filetypes": ["lua"],
-      "trace.server": "verbose"
-    }
+    //    "lua": {
+    //      "command": "/home/chris/.luambenvs/neovim4/bin/lua-lsp",
+    //      "filetypes": ["lua"],
+    //      "trace.server": "verbose"
+    //    }
   },
 
   "bookmark.sign": "",
