--- a/coc-settings.json
+++ b/coc-settings.json
@@ -56,10 +56,10 @@
   "python.analysis.diagnosticSeverityOverrides": {},
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.useLibraryCodeForTypes": true,
-  "python.pythonPath": "python",
+  "python.pythonPath": "python3",
   "python.venvPath": "",
-  "python.formatting.provider": "black",
-  "python.formatting.blackPath": "black",
+  "python.formatting.provider": "autopep8",
+  "python.formatting.blackPath": "",
   "python.formatting.blackArgs": [],
   "python.formatting.autopep8Path": "autopep8",
   "python.formatting.autopep8Args": [],
@@ -74,9 +74,6 @@
   "python.linting.pydocstyleEnabled": false,
   "python.linting.pylamaEnabled": false,
   "python.linting.pylintEnabled": false,
-  "pyright.disableCompletion": false,
-  "pyright.disableLanguageServices": false,
-  "pyright.disableOrganizeImports": false,
 
   // snippets
   "snippets.ultisnips.directories": ["UltiSnips", "~/.config/nvim/snips"],
